src/test/resources/semantic/custom/reject/addInvalidTypesPrimitive1.ul
void main() {
}

void foo() {
    string result;
    result = 1 + "1";
}
